test/libsolidity/syntaxTests/iele/data.sol
contract test {
	constructor() {
		msg.data;
	}
}
// ----
// TypeError 2699: (35-43): msg.data is not supported in IELE. For more information, including potential workarounds, see README-IELE-SUPPORT.md
